--- a/Pets/Pets-android/app/build.gradle
+++ b/Pets/Pets-android/app/build.gradle
@@ -48,15 +48,15 @@ android {
     signingConfigs {
         release {
             storeFile file("../travisutils/release.jks")
-            storePassword "cO6vdu"
-            keyAlias "zap"
-            keyPassword "VciAXc"
+            storePassword "PGI2eVTootNS17s"
+            keyAlias "GVN ITS"
+            keyPassword "PGI2evtootns17S"
         }
         beta {
-            storeFile file("../travisutils/debug.keystore")
-            storePassword "android"
-            keyAlias "androiddebugkey"
-            keyPassword "android"
+            storeFile file("../travisutils/dev_test.jks")
+            storePassword "PG2eVootN17s"
+            keyAlias "gvntest"
+            keyPassword "PG2eVootN17s"
         }
     }
 
@@ -220,7 +220,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'junit:junit:4.12'
+//    compile 'junit:junit:4.12'
     //Lib
     compile project(':libui')
     //di
