--- a/MusicApp/app/build.gradle
+++ b/MusicApp/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
@@ -37,6 +38,7 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
     compile 'com.jgeppert.struts2.bootstrap:bootstrap:2.5.0'
+    compile 'com.github.mkaflowski:HybridMediaPlayer:1.1.342'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
